--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -27,11 +27,9 @@
 
 <div class="fast-go-btn-container">
     <div ui-sref="macroIndustryDisplay" class="fast-go-btn go-to-macro"></div>
-    <div class="fast-go-btn"></div>
+    <div ui-sref="microIndustryChain" class="fast-go-btn go-to-micro"></div>
+    <div class="fast-go-btn go-to-tendency"></div>
 </div>
-
-<a ui-sref="microIndustryChain">前往 micro industry chain view</a>
-<a ui-sref="macroIndustryDisplay">前往 macro industry display</a>
 
 <script src="bower_components/swiper/dist/js/swiper.min.js"></script>
 <script>
