--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -15,8 +15,8 @@
     <div id="leftToolBar">
 
         <ul class="nav nav-tabs small">
-            <li class="active"><a href="#nodeHistory" data-toggle="tab">节点</a></li>
-            <li><a href="#connectionHistory" data-toggle="tab">联系</a></li>
+            <li class="active"><a href="#nodeHistory" onclick="return false;" data-toggle="tab">节点</a></li>
+            <li><a href="#connectionHistory" onclick="return false;" data-toggle="tab">联系</a></li>
         </ul>
         <div class="historyBlock">
             <div class="tab-content">
