--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.css
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.css
@@ -3,8 +3,10 @@
     top: 0;
     /*background: radial-gradient(ellipse closest-corner at 55% 45%, rgb(92,92,92), rgb(62,62,62));*/
     background: url(/view/resource/背景.png) no-repeat;
-    -webkit-background-size: 100%;
+    /*-webkit-background-size: 100%;*/
     /*background-size: 100%;*/
+    -webkit-background-size: 100vw 100vh;
+    background-size: 100vw 100vh;
     width: 100vw;
     height: 100vh;
     z-index: -1;
