--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.html
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.html
@@ -19,7 +19,7 @@
         </div>
         <div style="display:flex">
 
-            <li><a ui-sref="" ng-mouseover="showDataPane2()"  ng-mouseleave="hideDataPane2()">经济数据</a></li>
+            <a class="nav" ui-sref="" ng-mouseover="showDataPane2()"  ng-mouseleave="hideDataPane2()">经济数据</a>
             <div class="dataPane2" ng-mouseover="showDataPane2()"  ng-mouseleave="hideDataPane2()" ng-show='toshowDataPane2'>
                 <a ui-sref="macroIndustryDisplay.qyjx">企业绩效</a><br>
                 <a ui-sref="macroIndustryDisplay.hysxysj">行业上下游<br>数据</a><br>
@@ -27,7 +27,7 @@
             </div>
 
         </div>
-        <a class="nav" ui-sref="macroIndustryDisplay.sellNum">经济数据</a>
+        <!--<a class="nav" ui-sref="macroIndustryDisplay.sellNum">经济数据</a>-->
         <a class="nav">财务数据</a>
         <a class="nav">行业地位</a>
         <a class="nav">主要上市公司</a>
