--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -63,7 +63,7 @@
                 </button>
             </div>
             <div class="topToolBarBigBlockCell">
-                <button id="saveBtn" class="btn btn-default topToolBarBigBtn"
+                <button id="saveBtn" class="btn btn-default topToolBarBigBtn" ng-click="save()"
                         data-popover="popover" data-trigger="hover" data-placement="bottom"
                         title="保存作品" data-content="将您的作品草稿【保存】到云端仓库">
                     保存
