--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -25,9 +25,12 @@
             <div class="login-sub">
                 <p class="small">注册新用户</p>
             </div>
+            <div class="login-notice small">
+                {{notice}}
+            </div>
             <div class="login-other">
                 <p class="small">其他登录方式：</p>
-                <button></button>
+                <button id="citiBtn"></button>
             </div>
         </div>
     </div>
