--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -1,4 +1,9 @@
-discover
+
+<div class="graphListBlock">
+    <div class="graphCell" ng-repeat="graph in allGraphList">
+        {{graph.graphid}}
+    </div>
+</div>
 
 
 
