--- a/app/view/microIndustryChain/microIndustryChain.html
+++ b/app/view/microIndustryChain/microIndustryChain.html
@@ -1,7 +1,7 @@
 <nav class="david-navbar" role="navigation">
     <div>
         <div>
-            <a class="navbar-brand"><img class="nav-icon" src="view/login/citi-white.svg" alt="花旗"></a>
+            <a ui-sref="home" class="navbar-brand"><img class="nav-icon" src="view/login/citi-white.svg" alt="花旗"></a>
         </div>
         <div>
             <ul class="david-navbar-right">
