--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -45,7 +45,7 @@
                 <label class="name_part">{{category_toShow}}</label>
                 <div class="list_part">
                     <ul>
-                        <li ng-repeat="item in list_toShow"><a href="" ng-click="goToCompanyDetails(item)">{{item.stkcd}}</a></li>
+                        <li ng-repeat="item in list_toShow"><a href="" ng-click="goToCompanyDetails(item)">{{item.name}}</a></li>
                     </ul>
                 </div>
             </div>
