--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
@@ -42,7 +42,7 @@
     height: 80vh;
     background: linear-gradient(rgba(70,70,70,0.1), rgba(160,160,160, 1), rgba(70,70,70,0.1)),
                 linear-gradient(to right, rgba(123, 123, 123, 0.1), rgba(160, 160, 160, 0.1));
-    left: 2px;
+    left: 1px;
     top: 50%;
     transform: translateY(-50%);
     margin: 0px;
@@ -100,9 +100,10 @@
     width: 150px;
 }
 .name_part{
-    width: 150px;
+    width: 300px;
     height: 30px;
     /*cursor: pointer;*/
+    color: rgba(140,140,140, 0.8);
 }
 .companyList{
     width: 30%;
@@ -113,6 +114,10 @@
     top:0;
     min-width: 430px;
     padding: 30px 0 0 50px;
+}
+.companyList a{
+    color: rgba(135,150,250, 0.8);
+    text-decoration: none;
 }
 .part_toTouch{
     cursor: pointer;
