行业地位(部分

--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.css
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.css
@@ -19,33 +19,25 @@ body{
 }
 
 .dataPane{
-    line-height: 20px;
-    font-size: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    line-height: 25px;
+    font-size: 13px;
     color: white;
     text-align: center;
     border-radius: 20px;
     position: fixed;
-    top: 22px;
-    margin-left:64px;
-    width: 74px;
-    height: 120px;
+    top: 38px;
+    margin-left:-50px;
+    width: 180px;
+    height: 60px;
     background-color:rgba(0, 0, 0, 0.7);
     z-index: 102;
 }
 
-.dataPane2{
-    line-height: 20px;
-    font-size: 10px;
-    color: white;
-    text-align: center;
-    border-radius: 20px;
-    position: fixed;
-    top: 32px;
-    margin-left:64px;
-    width: 74px;
-    height: 120px;
-    background-color:rgba(0, 0, 0, 0.7);
-}
+
+
+
 
 .header_macro{
     position: fixed;
