--- a/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.html
+++ b/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.html
@@ -37,8 +37,8 @@
 
 </div>
 
-<div style="margin-left: 22%;width: 50%;background-color: white">
-    <table>
+<div style="margin-left: 22%;width: 50%;background-color: white;margin-top: 10%">
+    <table >
         <tr>
             <th>序号</th>
             <th>行业名称</th>
@@ -56,5 +56,32 @@
             <td>能源设备</td>
 
         </tr>
+        <tr>
+            <td>1</td>
+            <td>能源设备</td>
+            <td><img src="view/resource/汽车icon.png" style="width: 50px;height: 50px"></td>
+            <td>能源设备</td>
+            <td>能源设备</td>
+            <td>能源设备</td>
+
+        </tr>        <tr>
+        <td>1</td>
+        <td>能源设备</td>
+        <td><img src="view/resource/汽车icon.png" style="width: 50px;height: 50px"></td>
+        <td>能源设备</td>
+        <td>能源设备</td>
+        <td>能源设备</td>
+
+    </tr>        <tr>
+        <td>1</td>
+        <td>能源设备</td>
+        <td><img src="view/resource/汽车icon.png" style="width: 50px;height: 50px"></td>
+        <td>能源设备</td>
+        <td>能源设备</td>
+        <td>能源设备</td>
+
+    </tr>
     </table>
 </div>
+
+<link rel="stylesheet" href="view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.css"/>
