--- a/app/view/macroIndustryDisplay/industryData/industryData.html
+++ b/app/view/macroIndustryDisplay/industryData/industryData.html
@@ -48,136 +48,117 @@
 <br>
 
 <div id="capacity" class="part">
-    <h3>行业产能</h3>
 
     <div id="div_cyc" class="part2">
-        <h5 style="text-align: center">乘用车</h5>
         <br>
-        <div id="zggnzzcyccl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzcycfcxcl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="zggnzzcyccl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zggnzzcycfcxcl" style="width: 43%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_syc" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">商用车</h5>
         <br>
-        <div id="zggnzzsyccl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzsycfcxcl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="zggnzzsyccl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zggnzzsycfcxcl" style="width: 43%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_xzcn" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">新增产能</h5>
         <br>
-        <div id="zgqchyxzcn" style="width: 49%;height:400px;margin-left: 30%"></div>
+        <div id="zgqchyxzcn" style="width: 43%;height:400px;margin-left: 30%"></div>
     </div>
 
     <div id="div_zgqccl" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">中国汽车产量</h5>
         <br>
-        <div id="zgqccl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgzyqcjtcl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgzyqcjtjbxcyccl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="zgqccl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zgzyqcjtcl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="zgzyqcjtjbxcyccl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
     </div>
 </div>
 
 <div id="inventory" class="part">
-    <h3>行业库存</h3>
 
     <div id="div_ccpch" class="part2">
-        <h5 style="text-align: center">产成品存货</h5>
         <br>
-        <div id="zgqchyccpch" style="width: 49%;height:400px;margin-left: 30%"></div>
+        <div id="zgqchyccpch" style="width: 43%;height:400px;margin-left: 30%"></div>
     </div>
 
     <div id="div_kcxs" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">库存系数</h5>
         <br>
-        <div id="zgqcjxskcxs" style="width: 49%;height:400px;margin-left: 30%"></div>
+        <div id="zgqcjxskcxs" style="width: 43%;height:400px;margin-left: 30%"></div>
     </div>
 
     <div id="div_kcyjzs" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">库存预警指数</h5>
         <br>
-        <div id="zgqcjxskcyjzs" style="width: 49%;height:400px;margin-left: 30%"></div>
+        <div id="zgqcjxskcyjzs" style="width: 43%;height:400px;margin-left: 30%"></div>
     </div>
 
 </div>
 
 <div id="price" class="part">
-    <h3>价格</h3>
 
     <div id="div_GAIN" class="part2">
-        <h5 style="text-align: center">价格</h5>
         <br>
-        <div id="cycztjgbhzs" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="cycztzdyhzs" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="cycztjgbhzs" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="cycztzdyhzs" style="width: 43%;height:400px;display: inline-block"></div>
     </div>
 
 </div>
 
 <div id="holdNum" class="part">
-    <h3>汽车保有量</h3>
 
     <div id="div_qcbyl" class="part2">
-        <h5 style="text-align: center">汽车保有量</h5>
         <br>
-        <div id="zgqcbyl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgqcmqrbyl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="zgqcbyl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zgqcmqrbyl" style="width: 43%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_qczc" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">汽车注册</h5>
         <br>
-        <div id="zgxzcmyqcsl" style="width: 49%;height:400px;margin-left: 30%"></div>
+        <div id="zgxzcmyqcsl" style="width: 43%;height:400px;margin-left: 30%"></div>
     </div>
 
     <div id="div_qqqcbyl" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">全球汽车保有量</h5>
         <br>
-        <div id="qqqcbyl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="qqmqrqcbyl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="qqqcbyl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="qqmqrqcbyl" style="width: 43%;height:400px;display: inline-block"></div>
     </div>
 
 </div>
 
 <div id="sellNum" class="part">
-    <h3>整车销量</h3>
 
     <div id="div_zgqcxl" class="part2">
-        <h5 style="text-align: center">中国汽车销量</h5>
         <br>
-        <div id="zgqcxl" style="width: 600px;height:400px;margin-left: 30%"></div>
+        <div id="zgqcxl" style="width: 43%;height:400px;margin-left: 30%"></div>
     </div>
 
     <div id="div_cycxl" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">乘用车销量</h5>
         <br>
-        <div id="zgcycxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgcycfcxxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgcycfrllxxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgcycfppxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzcycxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzcycfcxxl" style="width:49%;height:400px;display: inline-block"></div>
+        <div id="zgcycxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zgcycfcxxl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="zgcycfrllxxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zgcycfppxl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="zggnzzcycxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zggnzzcycfcxxl" style="width:43%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_sycxl" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">商用车销量</h5>
         <br>
-        <div id="zgsycxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgsycfcxxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgsycfrllxxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzsycxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzsycfcxxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggnzzsycfrllxxl" style="width:49%;height:400px;display: inline-block"></div>
+        <div id="zgsycxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zgsycfcxxl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="zgsycfrllxxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zggnzzsycxl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="zggnzzsycfcxxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="zggnzzsycfrllxxl" style="width:43%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_qqqcxl" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">全球汽车销量</h5>
+        <h5 style="text-align: center;margin-top: 10%"></h5>
         <br>
-        <div id="qqcycxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="qqsycxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="mgqcxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="rbqcxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="dgqcxl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="qqcycxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="qqsycxl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="mgqcxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
+        <div id="rbqcxl" style="width: 43%;height:400px;display: inline-block"></div>
+        <div id="dgqcxl" style="width: 43%;height:400px;display: inline-block;margin-left: 12%"></div>
     </div>
 
 </div>
