--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.html
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.html
@@ -7,13 +7,13 @@
     <div class="module_nav">
         <a class="nav" ui-sref="macroIndustryDisplay.generalInfo">基本情况</a>
         <div style="display:flex">
-            <a class="nav" ui-sref="macroIndustryDisplay.industryData" ng-mouseover="showDataPane()"  ng-mouseleave="hideDataPane()">行业指标</a>
+            <a class="nav" ui-sref="macroIndustryDisplay.industryData({target: ''})" ng-mouseover="showDataPane()"  ng-mouseleave="hideDataPane()">行业指标</a>
             <div class="dataPane" ng-mouseover="showDataPane()"  ng-mouseleave="hideDataPane()" ng-show='toshowDataPane'>
-                <a ui-sref="macroIndustryDisplay.sellNum">整车销量</a>&ensp;&ensp;&ensp;&ensp;
-                <a ui-sref="macroIndustryDisplay.holdNum">汽车保有量</a><br>
-                <a ui-sref="macroIndustryDisplay.capacity">行业产能</a>&ensp;
-                <a ui-sref="macroIndustryDisplay.inventory">行业库存</a>&ensp;
-                <a ui-sref="macroIndustryDisplay.price">价格</a><br>
+                <a ui-sref="macroIndustryDisplay.industryData({target: 'sellNum'})">整车销量</a>&ensp;&ensp;&ensp;&ensp;
+                <a ui-sref="macroIndustryDisplay.industryData({target: 'holdNum'})">汽车保有量</a><br>
+                <a ui-sref="macroIndustryDisplay.industryData({target: 'capacity'})">行业产能</a>&ensp;
+                <a ui-sref="macroIndustryDisplay.industryData({target: 'inventory'})">行业库存</a>&ensp;
+                <a ui-sref="macroIndustryDisplay.industryData({target: 'price'})">价格</a><br>
             </div>
         </div>
         <div style="display:flex">
