经济数据位置调整

--- a/app/view/macroIndustryDisplay/economicData/economicData.html
+++ b/app/view/macroIndustryDisplay/economicData/economicData.html
@@ -26,56 +26,50 @@
 </div>
 
 <div id="hycw" class="part">
-    <h3>行业财务及固定资产投资</h3>
 
     <div id="div_hygc" class="part2">
-        <h5 style="text-align: center">行业概况</h5>
         <br>
-        <div id="srzgdpbz" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="qyhksqysl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="srzgdpbz" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="qyhksqysl" style="width: 39%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_zgqchycwsj" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">中国汽车行业财务数据</h5>
         <br>
-        <div id="fzzj" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="lrze" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zyywcb" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zczj" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="fzzj" style="width: 39%;height:400px;display: inline-block;margin-left:21%"></div>
+        <div id="lrze" style="width: 39%;height:400px;display: inline-block"></div>
+        <div id="zyywcb" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zczj" style="width: 39%;height:400px;display: inline-block"></div>
     </div>
 
     <div id="div_zgqchygdzctj" class="part2">
-        <h5 style="text-align: center;margin-top: 10%">中国汽车行业固定资产投资</h5>
         <br>
-        <div id="gdzctze" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="gdzctzzqgtzbz" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="gdzctze" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="gdzctzzqgtzbz" style="width: 39%;height:400px;display: inline-block"></div>
     </div>
 
 </div>
 
 <div id="hysxysj" class="part">
     <div id="div_hysxysj" class="part2">
-        <h5 style="text-align: center">行业上下游数据</h5>
         <br>
-        <div id="zggcjg" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggllkzzl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zggdzctzjgzs" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgjmxfzc" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgkcxl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgrjgdpzs" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgtrxjyjscj" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgzkcl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="zggcjg" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zggllkzzl" style="width: 39%;height:400px;display: inline-block"></div>
+        <div id="zggdzctzjgzs" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zgjmxfzc" style="width: 39%;height:400px;display: inline-block"></div>
+        <div id="zgkcxl" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zgrjgdpzs" style="width: 39%;height:400px;display: inline-block"></div>
+        <div id="zgtrxjyjscj" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zgzkcl" style="width: 39%;height:400px;display: inline-block"></div>
     </div>
 
 </div>
 
 <div id="qyjx" class="part">
     <div id="div_qyjx" class="part2">
-        <h5 style="text-align: center">企业绩效</h5>
-        <div id="zgqchyqbcyrypjrs" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgqcqysnxspjzzl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgqcqyxjldfzbl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgqcqyxslrl" style="width: 49%;height:400px;display: inline-block"></div>
-        <div id="zgqcqyzcfzl" style="width: 49%;height:400px;display: inline-block"></div>
+        <div id="zgqchyqbcyrypjrs" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zgqcqysnxspjzzl" style="width: 39%;height:400px;display: inline-block"></div>
+        <div id="zgqcqyxjldfzbl" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
+        <div id="zgqcqyxslrl" style="width: 39%;height:400px;display: inline-block"></div>
+        <div id="zgqcqyzcfzl" style="width: 39%;height:400px;display: inline-block;margin-left: 21%"></div>
     </div>
 </div>
