add personal、add getGraphByID

--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -83,7 +83,7 @@
                         title="发布到社区" data-content="将您的作品【发布】到社区，赚取阅读赏金">
                     发布
                 </button>
-                <button id="shareBtn" class="btn btn-default topToolBarBigBtn"
+                <button id="shareBtn" class="btn btn-default topToolBarBigBtn" ng-click="test()"
                         data-popover="popover" data-trigger="hover" data-placement="bottom"
                         title="分享到社交平台" data-content="将您的作品【分享】到社交平台">
                     分享
