--- a/app/view/microIndustryChain/microIndustryChain.html
+++ b/app/view/microIndustryChain/microIndustryChain.html
@@ -1,16 +1,4 @@
-<nav class="david-navbar" role="navigation">
-    <div>
-        <div>
-            <a ui-sref="home" class="navbar-brand"><img class="nav-icon" src="view/login/citi-white.svg" alt="花旗"></a>
-        </div>
-        <div>
-            <ul class="david-navbar-right">
-                <li ui-sref="login" ng-show="haslogined"><a>个人中心</a></li>
-                <li ui-sref="login" ng-hide="haslogined"><a>登录</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<david-nav></david-nav>
 
 <br>
 
