--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -1,7 +1,7 @@
-<nav class="david-navbar" role="navigation">
+<nav class="david-navbar david-navbar-bottom" role="navigation">
     <div>
         <div>
-            <a class="navbar-brand"><img class="nav-icon" src="view/login/citi-white.svg" alt="花旗"></a>
+            <a class="navbar-brand"><img class="nav-icon" src="citi-icon/citi-white.svg" alt="花旗"></a>
         </div>
         <div>
             <ul class="david-navbar-right">
