--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="view/microIndustryChain/previewChainView/previewChainView.css">
 <link rel="stylesheet" href="view/microIndustryChain/previewChainView/iconfont/iconfont.css">
-<div style="position:absolute; left:0; top:0; width:100%;height:100%;">
-    <div style="width: 40%;float: left;position: absolute">
+<div style="position:absolute; left:0; width:100%;height:100%;">
+    <div id= "left_div"style="width: 40%;float: left;position: absolute">
         <div id="topElement" onselectstart="return false;">
 
     <div>
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-        <div style="left: 50px;top: 700px;width: 1000px;position: absolute;text-align: center">
+        <div id = "article" style="left: 50px;top: 700px;width: 1000px;position: absolute;text-align: center">
             <h1 style="">新型产业链模式下的新契机</h1>
             <div style="text-align: center;width: 800px;margin:0 auto">
                     <p>随着技术的发展，迂回生产程度的提高，生产过程划分为一系列有关联的生产环节。分工与交易的复杂化\n
@@ -31,8 +31,8 @@
         </div>
     </div>
 
-    <div style="width: 35%;float: left;display: flex; -webkit-box-orient: vertical;
--webkit-box-direction: normal;    flex-direction: column;    position: absolute;    right: 0px;    top: 50px;    height: 100%;    background-color: #f7f8fa;    border: solid 1px #eeeff2;
+    <div id="right_div" style="width: 35%;float: left;display: flex; -webkit-box-orient: vertical;
+-webkit-box-direction: normal;    flex-direction: column;    position: absolute;    right: 0px;    background-color: #f7f8fa;    border: solid 1px #eeeff2;
     overflow-y: scroll;">
         <div id="content" style="width: 100%; height: auto;">
             <div class="wrap">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="content">
                         <div class="cont-box">
-                            <textarea class="text" placeholder="请输入..."></textarea>
+                            <textarea class="text" placeholder="请输入..." wrap="hard"></textarea>
                         </div>
                         <div class="tools-box">
                             <!--<div class="operator-box-btn"><span class="face-icon">☺</span><span class="img-icon">▧</span></div>-->
