--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -32,8 +32,8 @@
     </div>
 
     <div id="right_div" style="width: 35%;float: left;display: flex; -webkit-box-orient: vertical;
--webkit-box-direction: normal;    flex-direction: column;    position: absolute;    right: 0px;    background-color: #f7f8fa;    border: solid 1px #eeeff2;
-    overflow-y: scroll;">
+-webkit-box-direction: normal;    flex-direction: column;    position: absolute;      background-color: #f7f8fa;    border: solid 1px #eeeff2;
+    overflow-y: scroll;left: 1060px;">
         <div id="content" style="width: 100%; height: auto;">
             <div class="wrap">
                 <div class="comment">
