--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="view/microIndustryChain/previewChainView/previewChainView.css">
 <link rel="stylesheet" href="view/microIndustryChain/previewChainView/iconfont/iconfont.css">
-<div style="position:absolute; left:0; width:100%;height:100%;">
+<div style="position:absolute; left:0; width:100%;height:100%; overflow: hidden">
     <div id= "left_div"style="width: 40%;float: left;position: absolute">
         <div id="topElement" onselectstart="return false;">
 
@@ -31,9 +31,7 @@
         </div>
     </div>
 
-    <div id="right_div" style="width: 35%;float: left;display: flex; -webkit-box-orient: vertical;
--webkit-box-direction: normal;    flex-direction: column;    position: absolute;      background-color: #f7f8fa;    border: solid 1px #eeeff2;
-    overflow-y: scroll;left: 1060px;">
+    <div id="right_div">
         <div id="content" style="width: 100%; height: auto;">
             <div class="wrap">
                 <div class="comment">
