--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -1,7 +1,7 @@
 
 <div class="graphListBlock">
-    <div class="graphCell" ng-repeat="graph in allGraphList">
-        {{graph.graphid}}
+    <div ui-sref="microIndustryChain.previewChainView" class="graphCell" ng-repeat="graph in allGraphList">
+
     </div>
 </div>
 
