--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -36,8 +36,8 @@
             <div class="wrap">
                 <div class="comment">
                     <div class="head-face">
-                        <img src="view/microIndustryChain/previewChainView/images/头像.jpg">
-                        <p style="margin-top: 10px;    font-weight:bold;font-size: 15px">zyb牛逼</p>
+                        <img src="view/microIndustryChain/previewChainView/images/user.svg">
+                        <p style="margin-top: 10px;    font-weight:bold;font-size: 15px">用户</p>
                     </div>
                     <div class="content">
                         <div class="cont-box">
@@ -53,7 +53,7 @@
                     <ul>
                         <li ng-repeat="comment_detail in commentList track by $index">
                             <div class="head-face">
-                                <img src="view/microIndustryChain/previewChainView/images/头像.jpg"></div>
+                                <img src="view/microIndustryChain/previewChainView/images/user.svg"></div>
                             <div class="reply-cont">
                                 <p class="username" >{{comment_detail.author}}</p>
                                 <!--<p class="like" ng-click="like_comment(comment_detail)" >  &#xe602;</p>-->
