--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,10 +1,16 @@
 
 <david-nav></david-nav>
 
-<div class="swiper-container david-container" style="height: 500px">
+<div class="swiper-container david-container" style="height: 700px">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img width="100%" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1535545564908&di=8cfc49578f4b66f49213c8abd4699e9d&imgtype=0&src=http%3A%2F%2Fimgsrc.baidu.com%2Fimage%2Fc0%253Dpixel_huitu%252C0%252C0%252C294%252C40%2Fsign%3Dd3eeeb377bcf3bc7fc0dc5acb878dfcd%2F0824ab18972bd407811dc4c770899e510fb30935.jpg"></div>
-        <div class="swiper-slide"><img width="100%" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1535545717684&di=3ea466498d96fcd02b5e39dfa8f4f5cd&imgtype=0&src=http%3A%2F%2Fimgsrc.baidu.com%2Fimgad%2Fpic%2Fitem%2F7acb0a46f21fbe09a8598ee261600c338644adc5.jpg"></div>
+        <div class="swiper-slide">
+            <p class="bigTitle">花旗产业链平台正式上线</p>
+            <p class="smallTitle">高速快捷的产业分析体验，节省大量时间</p>
+            <img width="100%" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1535902349080&di=8c4ab92b3da6ed932aac8f91179cf75d&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01cc1259e80ae3a801202b0c1fd83b.jpg%403000w_1l_2o_100sh.jpg"></div>
+        <div class="swiper-slide">
+            <p class="bigTitle">点击查看宏观、微观两大功能</p>
+            <p class="smallTitle">方便的构图工具，以及易懂的产业链分析</p>
+            <img width="100%" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1536496295&di=01c063b2d3fc4c8729cf615e5da22814&imgtype=jpg&er=1&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01557c5541eab000000115416f6b1a.jpg%401280w_1l_2o_100sh.jpg"></div>
     </div>
     <!-- 分页器 -->
     <div class="swiper-pagination"></div>
