--- a/app/view/personal/personal.css
+++ b/app/view/personal/personal.css
@@ -10,8 +10,17 @@
 }
 
 #leftUserDiv button{
+    position: relative;
+    height: 40px;
     width: 100%;
     margin-top: 20px;
+    border-radius: 0;
+    background: #ff7269;
+    color: #fff;
+    border: 0;
+    outline: none;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .175);
 }
 
 
