--- a/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.html
+++ b/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.html
@@ -33,6 +33,9 @@
 </div>
 <div style="width:100%;height: 400px;background-color: white">
 <div id="test" style="height:400px"></div>
+    <div style="width: 100%;height: 70px;background-color: white">
+    <p>注：图形中剔除Y轴估值为负值的行业</p>
+    </div>
 </div>
 
 </div>
