--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -68,7 +68,7 @@
                         title="保存作品" data-content="将您的作品草稿【保存】到云端仓库">
                     保存
                 </button>
-                <button id="previewBtn" class="btn btn-default topToolBarBigBtn" ui-sref="microIndustryChain.previewChainView({'nodeIDList':nodeIDList, 'nodeList':nodeList, 'nodeDisplayList':nodeDisplayList, 'connectionList':connectionList})"
+                <button id="previewBtn" class="btn btn-default topToolBarBigBtn" ui-sref="microIndustryChain.previewChainView({'graphid':graphID, 'nodeIDList':nodeIDList, 'nodeList':nodeList, 'nodeDisplayList':nodeDisplayList, 'connectionList':connectionList})"
                         data-popover="popover" data-trigger="hover" data-placement="bottom"
                         title="预览作品" data-content="以阅读者的视角【查看】此产业链">
                     预览</button>
