--- a/app/view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.html
+++ b/app/view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.html
@@ -39,5 +39,10 @@
 
 </div>
 
+<div style="margin-left: 22%;width: 50%;background-color: white">
+    <table id="table">
 
-<link rel="stylesheet" href="view/macroIndustryDisplay/industryStatus/hylsjb/hylsbj.css">
+    </table>
+</div>
+
+<link rel="stylesheet" href="view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.css"/>
