--- a/app/view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.html
+++ b/app/view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.html
@@ -1,10 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+<div style="margin-left: 22%;width: 50%;margin-top: 3%">
+    <div style="display: inline-block;padding: 5px 0px 0px 15px;background-color: #E5F0FF;height: 40px;width: 100%;">
+        <label>市场</label>
+        <select  ng-model="market" ng-change="changeMarket()">
+            <option value="全部">全部</option>
+            <option value="沪深A股">沪深A股</option>
+            <option value="新三板做市">新三板做市</option>
+        </select>
+
+        <label style="margin-left: 20px;margin-right: 8px">时间范围</label>
+        <button style="display: inline-block" ng-click="COW()">1W</button>
+        <button style="display: inline-block" ng-click="COM()">1M</button>
+        <button style="display: inline-block" ng-click="CTM()">3M</button>
+        <button style="display: inline-block" ng-click="CYTD()">YTD</button>
+        <button style="display: inline-block" ng-click="COY()">1Y</button>
+
+        <label style="margin-left: 20px">基准</label>
+        <select ng-model="standard" ng-change="changeStandard()">
+            <option value="沪深300">沪深300</option>
+            <option value="三板做市">三板做市</option>
+            <option value="上证综指">上证综指</option>
+            <option value="深证成指">深证成指</option>
+            <option value="中小板指">中小板指</option>
+            <option value="创业板指">创业板指</option>
+
+        </select>
+
+
+
+
+
+
+    </div>
+    <div style="width:100%;height: 400px;background-color: white">
+        <div id="test" style="height:400px"></div>
+
+    </div>
+
+</div>
+
+<div style="margin-left: 22%;width: 50%;background-color: white;margin-top: 2%">
+    <table id="table">
+
+    </table>
+</div>
+
+<link rel="stylesheet" href="view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.css"/>
